--- a/source/webapp/templates/partial/articles_list.html
+++ b/source/webapp/templates/partial/articles_list.html
@@ -15,6 +15,7 @@
                     <div class="btn-group" role="group">
                         <a href="{{ article.get_absolute_url }}" class="btn btn-primary"><i
                                 class="bi bi-blockquote-right"></i></a>
+                        <a href="#" class="btn btn-primary"><i class="bi bi-heart"></i></a>
                         {% if perms.webapp.change_article or request.user == article.author %}
                             <a href="{% url "webapp:update_article" article.pk %}"
                                class="btn btn-primary"><i class="bi bi-pencil-square"></i></a>
